# NetworkSpy-Tauri

./: .env.example  .gitignore  ARCHITECTURE.md  CUSTOM_VIEWER.md  FEATURES.md  MCP.md  README.md  SECURITY.md  TODO_PERF.md  TODO_PERF2.md  TODO_TLS.md  bun.lockb  index.html  install-dev.ps1  install-dev.sh  install.ps1  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.storybook/: preview.ts  preview.tsx
landing-page/: README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
landing-page/public/: install.ps1  install.sh
scripts/: bump-version.sh  setup-dev.ps1  setup-dev.sh
src/: layout.tsx  main.tsx  styles.css
src-tauri/: .env  .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: breakpoints.rs  ca_manager.rs  certificate_installer.rs  commands.rs  config.rs  eval.rs  handler.rs  license.rs  main.rs  mcp.rs  menu.rs  proxy_handler.rs  proxy_toggle.rs  scripting.rs  settings.rs  utils.rs
src-tauri/src/ca/: network-spy.ca  network-spy.key
src-tauri/src/mcp/: breakpoints.rs  mod.rs  scripting.rs  traffic.rs  validator.rs
src-tauri/src/mcp/schema/: capabilities.json  filter_preset_template.json  resources.json  tools.json
src-tauri/src/proxy_handlers_functions/: breakpoints.rs  mod.rs  scripting.rs  traffic_updater.rs
src-tauri/src/scripts/: install_certificate_linux.sh  install_certificate_windows.ps1  install_certificates_mac.sh  uninstall_certificate_linux.sh
src-tauri/src/submenu/: certificate.rs  create_window.rs  diff.rs  edit.rs  file.rs  flow.rs  help.rs  mod.rs  scripting.rs  setup.rs  tools.rs  view.rs  window.rs
src-tauri/src/traffic/: bottom_pane.rs  db.rs  filter_engine.rs  har_util.rs  mod.rs  process_info.rs  request_pair.rs  response_pair.rs  sessions.rs  tags.rs  viewers.rs
src-tauri/src/traffic/schema/: breakpoints.rs  filter_presets.rs  mod.rs  scripts.rs  settings.rs  tags.rs  traffic.rs
src/context/: AnalyticsProvider.tsx  BottomPaneContext.tsx  ContainerQueryContext.tsx  FilterContext.tsx  FilterPresetContext.tsx  PaneProvider.tsx  SessionContext.tsx  SettingsProvider.tsx  TagContext.tsx  TauriProvider.tsx  UpgradeContext.tsx  ViewerContext.tsx
src/context/builtin-matchers/: audio.js  graphql-body.js  graphql-header.js  html.js  image.js  json.js  jwt.js  sse.js  video.js
src/hooks/: useAppUpdater.ts  useLicense.ts  useMobile.ts
src/models/: Filter.ts  Payload.ts  Plan.ts  ToolMethod.ts  Traffic.ts
src/routes/: account.tsx  extensions.tsx  home.tsx  settings.tsx  workspace.tsx
src/routes/certificate-installer/: Guide.tsx  index.tsx  web.tsx
src/routes/certificate-installer/computer/: Linux.tsx  Mac.tsx  Windows.tsx  index.tsx
src/routes/certificate-installer/development/: index.tsx
src/routes/certificate-installer/mobile/: AndroidDevice.tsx  AndroidEmulator.tsx  iOSDevice.tsx  iOSSimulator.tsx  index.tsx
src/routes/certificate-installer/vm/: Docker.tsx  KVM.tsx  VMWare.tsx  VirtualBox.tsx  index.tsx
src/routes/filters/: FilterDetails.tsx  FilterList.tsx  index.tsx
src/routes/home/: CenterPane.tsx  index.tsx  trafficGenerator.ts
src/routes/script-editor/: index.tsx
src/routes/script-list/: index.tsx
src/routes/sessions/: SessionList.tsx
src/routes/tools/: Breakpoint.tsx  Diffing.tsx  Rewrite.tsx
src/routes/tools/Breakpoint/: Breakpoint.tsx  index.tsx
src/routes/tools/Diffing/: Diffing.tsx  index.tsx
src/routes/tools/Tag/: Tag.tsx  (+1 more)
src/routes/viewers/: ViewerBuilder.tsx  ViewerList.tsx  index.tsx
src/stories/: Button.tsx
src/styles/: table.css  treeview.css
src/styles-platform/: default.css  macos.css  ubuntu.css  windows.css
src/utils/: atoms.ts  tagMatcher.ts  themes.ts  viewerBuilderAtoms.ts
testing-mcp/opencode/: AGENTS.md  opencode.jsonc
testing-workspace/: .gitignore
ui/: bun.lockb  package.json  tsconfig.json
ui/src/: App.tsx
(+93 files in other folders)
