[package]
name = "netwok-spy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
cron = "0.12.1"
chrono = "0.4.38"
bytes = "1.6.1"
tauri-plugin-context-menu = "0.7.1"
network_spy_proxy = { git = "https://github.com/muizidn/NetworkSpyProxy.git", version = "0.1.0" }
hyper = "1.4.1"
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
