[package]
name = "netwok-spy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
cron = "0.12.1"
chrono = "0.4.38"
bytes = "1.6.1"
tokio = { version = "1", features = ["sync", "full"] }
network_spy_proxy = { git = "https://github.com/muizidn/NetworkSpyProxy.git" }
hyper = "1.1"
once_cell = "1.19.0"
tempfile = "3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
zstd = "0.13"
flate2 = "1.1.9"
brotli = "8.0.2"
base64 = "0.22.1"

# [patch."https://github.com/muizidn/NetworkSpyProxy.git"]
# network_spy_proxy = { path = "../../NetworkSpyProxy" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
