[package]
name = "NetworkSpy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
cron = "0.12.1"
chrono = "0.4.38"
bytes = "1.6.1"
tokio = { version = "1", features = ["sync", "full"] }
async-trait = "0.1"
network_spy_proxy = { git = "https://github.com/muizidn/NetworkSpyProxy.git" }
hyper = "1.1"
once_cell = "1.19.0"
tempfile = "3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
zstd = "0.13"
flate2 = "1.1.9"
brotli = "8.0.2"
base64 = "0.22.1"
globset = "0.4.18"
regex = "1.10"
uuid = { version = "1.8", features = ["v4"] }
rcgen = "0.12"
hostname = "0.3"
time = { version = "0.3", features = ["macros"] }
boa_engine = "0.21.1"
dotenvy = "0.15.7"
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
futures = "0.3.32"
tokio-stream = "0.1.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Networking_WinInet", "Win32_Foundation"] }

# [patch."https://github.com/muizidn/NetworkSpyProxy.git"]
# network_spy_proxy = { path = "../../NetworkSpyProxy" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
